# zkp

./: CHANGELOG.md  Cargo.toml  README.md  diagram.txt
benches/: cmz13.rs  dleq.rs  zkp.rs
src/: batch_verifier.rs  constraints.rs  errors.rs  lib.rs  macros.rs  proofs.rs  prover.rs  util.rs  verifier.rs
src/toolbox/: batch_verifier.rs  mod.rs  prover.rs  verifier.rs
tests/: dleq.rs  dleq_using_constraint_api.rs  sig_and_vrf_example.rs  vrf.rs  vrf_public_zero.rs  zkp.rs
