[package]
name = "zkp"
version = "0.4.3"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
license = "CC0-1.0"
repository = "https://github.com/hdevalence/zkp"
documentation = "https://docs.rs/zkp"
categories = ["cryptography"]
keywords = ["cryptography", "curve25519", "zero-knowledge", "NIZK", "compiler"]
description = "This crate has an experimental zero-knowledge proof compiler implemented using Rust macros"
exclude = [
    ".gitignore"
]

[dependencies]
sha2 = "0.7"
merlin = "0.2"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
bincode = "1"

[dependencies.curve25519-dalek]
features = ["serde", "nightly", "alloc"]
version = "0.21"
default-features = false

[features]
default = ["std", "u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
nightly = ["curve25519-dalek/nightly"]
bench = [ ]
std = ["curve25519-dalek/std"]
alloc = ["curve25519-dalek/alloc"]
