[package]
name = "zkp"
version = "0.6.2"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/hdevalence/zkp"
documentation = "https://docs.rs/zkp"
categories = ["cryptography"]
keywords = ["cryptography", "curve25519", "zero-knowledge", "NIZK", "compiler"]
description = "This crate has an experimental zero-knowledge proof compiler implemented using Rust macros"
exclude = [
    ".gitignore"
]

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
merlin = "1"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.5"
failure_derive = "0.1.5"

[dependencies.curve25519-dalek]
features = ["serde", "nightly", "alloc"]
version = "1.0.3"

[dev-dependencies]
bincode = "1"
sha2 = "0.8"

[features]
default = ["u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
simd_backend = ["curve25519-dalek/simd_backend"]
nightly = ["curve25519-dalek/nightly"]
bench = [ ]
debug-transcript = ["merlin/debug-transcript"]
